raw: Applying 'eslint' to the project. Completing the implementation of the 'FormField' component. Using the 'json-server' library to simulate the application's back-end, creating the 'db.json' file containing the data that will be consumed by the interface and creating the 'server.js' file to run the fake server. Finally, updating the 'CadastroCategoria' component to use the 'FormField' component for the form fields and using the 'useEffect' hook to fetch the data from the server and render it on the screen.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aluraflix": "file:",
+    "json-server": "^0.17.4",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
@@ -16,7 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "server": "node ./server.js",
+    "dev": "concurrently \"react-scripts start\" \"npm run server\"",
+    "start": "npm run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +42,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2"
   }
 }
